# Project-4.-Mailing-list-management-service

./: .env.sample  pyproject.toml
config/: settings.py  urls.py
mailings/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailings/management/commands/: send_mailing.py
mailings/migrations/: 0001_initial.py  0002_initial.py  0003_message_owner.py
mailings/templates/: base_layout.html  footer.html  guest_layout.html  index.html  main_nav.html
mailings/templates/mailings/attempt/: attempt_confirm_delete.html  attempt_detail.html  attempt_form.html  attempt_list.html
mailings/templates/mailings/mailinglist/: mailinglist_confirm_delete.html  mailinglist_detail.html  mailinglist_form.html  mailinglist_list.html
mailings/templates/mailings/message/: message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
mailings/templates/mailings/recipient/: recipient_confirm_delete.html  recipient_detail.html  recipient_form.html  recipient_list.html
users/: forms.py  models.py  services.py  urls.py  views.py
users/management/commands/: cgm.py  csu.py
users/migrations/: 0001_initial.py  0002_alter_customuser_options.py  0003_alter_customuser_options.py
users/templates/users/: customuser_detail.html  customuser_list.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  profile_form.html  register.html
